2008-09-25  Jeremy Cribb <jcribb@email.unc.edu>
	* varforce_init.m: fixed bug where last sequence was not being used at all.
	* varforce_run.m: same.
	* varforce_todo.m: updated.

2008-09-16  Jeremy Cribb <jcribb@email.unc.edu>
	* varforce_run.m: fixed bug where degauss at beginning would return an empty set when trying to estimate remanance.  Now the code checks to see if the degauss location is at the middle or beginning of the zero-voltage region.

2008-05-27  Jeremy Cribb <jcribb@email.unc.edu>
	* varforce_compute_linefit_force.m: fixed a bug that assigned a VoltageID as a Voltage.
	* varforce_compute_sat_data.m: cosmetic changes.
	* varforce_plot_force_power_law.m: cosmetic changes.
	* varforce_plot_sat_data.m: cosmetic changes.
	* varforce_run.m: updated comments.
	* varforce_drive.m: fixed typo in documentation.
	* varforce_get_force.m: reduced stepsize for force interpolation.

2008-03-17  Jeremy Cribb <jcribb@email.unc.edu>
	* varforce_constants.m: Changed indexing of voltage to an index of voltageIDs.  This way one can have two regions in one sequence with the same voltage value.
	* varforce_analysis_gui.m: same.
	* varforce_compute_inst_force.m: same.
	* varforce_compute_sat_force.m: same.
	* varforce_drive_gui.m same.
	* varforce_init.m: same.
	* varforce_remove_buffer_points.m: same.
	* varforce_remove_drift.m: same.
	* varforce_run.m: same.

2008-03-07  Jeremy Cribb <jcribb@email.unc.edu>
	* varforce_drive_gui.m: fixed typo (myDAQid -> params.myDAQid)

2008-02-27  Jeremy Cribb <jcribb@email.unc.edu>
	- varforce_drive_gui.m: updated call to zerodaq.
	- varforce_init.m: same.

2008-02-27  Jeremy Cribb <jcribb@email.unc.edu>
	- varforce_drive_gui.fig: recommitted bober's changes.  something woncky happened last time.

2008-02-26  Jeremy Cribb <jcribb@email.unc.edu>
	 - varforce_drive.m: added code changes by david bober that includes degauss routines specific for the high-throughput magnetics system.
	 - varforce_drive_gui.m: same.